--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
   "dependencies": {
     "discord.js": "^11.3.0",
-    "ytdl-core": "0.20.4"
+     "ytdl-core": "^0.20.3",
+    "ytpl": "^0.1.14",
+    "ytsearcher": "^1.2.0"
   }
 }
