--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "discord.js": "^11.3.0",
     "ytdl-core": "^0.20.3",
     "ytpl": "^0.1.14",
     "ytsearcher": "^1.2.0"
