--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "discord.js": "^11.3.0",
     "ytdl-core": "^0.20.3",
     "ytpl": "^0.1.14",
-    "ytsearcher": "^1.2.0"
+    "ytsearcher": "^1.2.0",
+    "discord.js-musicbot-addon": "^13.3.1"
   },
   "repository": {
     "type": "git",
