--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme",
   "dependencies": {
-    "discord.js": "hydrabolt/discord.js#indev-old",
+    "discord.js": "^11.3.0"
     "ytdl-core": "0.20.4",
     "youtube-search": "^1.0.6",
     "mathjs": "^3.5.3",
