--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "ytdl-core": "^0.20.4",
     "youtube-search": "^1.0.6",
     "mathjs": "^3.5.3",
-    "express":"^4"
+    "express":"^4",
+ "discordie": "^0.7.4",
+    "m3u8": "0.0.7",
+    "request": "^2.74.0",
+    "youtube-dl": "^1.11.1"
   }
 }
