--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
-var config = {//Insert your bot token here, you can get this from https://discordapp.com/developers/applications/me
+var config = {
+  token: "a",//Insert your bot token here, you can get this from https://discordapp.com/developers/applications/me
   twitchClientId: "1v79zvjnxeyocbh5x4i3mnloboyac3", //Because twitch is a dick and requires it now (https://www.twitch.tv/settings/connections)
   ownerID: "246220920199446528", //Your (bot owner's) id for extra access. Can be blank for no owner.
   cmdPrefix: "R!", //The character or string commands must start with. DEFAULT: "!"
